--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@
     cursor: pointer;
 }
 
+.div:hover{
+    box-shadow: 1px 1px 1px #000;
+}
+
 .btn_cart{
     color: #FFFFFF;
     text-decoration: none;
@@ -57,6 +61,7 @@
     color: #FFFFFF;
     text-decoration: none;
 }
+
 
 .contato{
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
